--- a/tools/msvc/properties/ftgl.props
+++ b/tools/msvc/properties/ftgl.props
@@ -8,13 +8,13 @@
       <AdditionalIncludeDirectories>$(WinDepsDir)ftgl\include;$(WinDepsDir)freetype\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Lib>
-      <AdditionalDependencies>ftgl$(LibSuffix)-vc$(PlatformToolsetVersion).lib</AdditionalDependencies>
+      <AdditionalDependencies>ftgl$(LibSuffix)-vc143.lib</AdditionalDependencies>
     </Lib>
     <Lib>
       <AdditionalLibraryDirectories>$(PlatformDepsDir)ftgl\lib;$(PlatformDepsDir)fontconfig\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Lib>
     <Link>
-      <AdditionalDependencies>ftgl$(LibSuffix)-vc$(PlatformToolsetVersion).lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>ftgl$(LibSuffix)-vc143.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalLibraryDirectories>$(PlatformDepsDir)ftgl\lib;$(PlatformDepsDir)fontconfig\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
