--- a/tools/msvc/DarkRadiant.vcxproj
+++ b/tools/msvc/DarkRadiant.vcxproj
@@ -38,12 +38,12 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <CharacterSet>Unicode</CharacterSet>
-    <PlatformToolset>v143</PlatformToolset>
+    <PlatformToolset>v142</PlatformToolset>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <CharacterSet>Unicode</CharacterSet>
-    <PlatformToolset>v143</PlatformToolset>
+    <PlatformToolset>v142</PlatformToolset>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
@@ -146,7 +146,7 @@
       </DataExecutionPrevention>
     </Link>
     <PostBuildEvent>
-      <Command>$(DarkRadiantRoot)tools\msvc\post_build_event_x64.cmd $(Configuration) vc$(PlatformToolsetVersion)</Command>
+      <Command>$(DarkRadiantRoot)tools\msvc\post_build_event_x64.cmd $(Configuration) vc143</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -186,7 +186,7 @@
       </DataExecutionPrevention>
     </Link>
     <PostBuildEvent>
-      <Command>$(DarkRadiantRoot)tools\msvc\post_build_event_x64.cmd $(Configuration) vc$(PlatformToolsetVersion)</Command>
+      <Command>$(DarkRadiantRoot)tools\msvc\post_build_event_x64.cmd $(Configuration) vc143</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
